MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'D:\stm32\ARM\ARMCLANG\Bin'
Build target 'Table_Puppy'
compiling i2c.c...
compiling system_stm32f1xx.c...
compiling usart.c...
compiling stm32f1xx_hal_flash.c...
compiling gpio.c...
compiling stm32f1xx_hal_cortex.c...
compiling font.c...
compiling stm32f1xx_hal_gpio.c...
../Core/Src/main.c(112): error: use of undeclared identifier 'hdma_usart1_rx'
  112 |   __HAL_DMA_DISABLE_IT(&hdma_usart1_rx, DMA_IT_HT);
      |                         ^
1 error generated.
compiling main.c...
compiling stm32f1xx_hal_gpio_ex.c...
compiling dma.c...
compiling stm32f1xx_hal_msp.c...
compiling stm32f1xx_it.c...
compiling tim.c...
compiling stm32f1xx_hal.c...
compiling stm32f1xx_hal_rcc_ex.c...
compiling stm32f1xx_hal_pwr.c...
compiling oled.c...
compiling stm32f1xx_hal_exti.c...
compiling stm32f1xx_hal_flash_ex.c...
compiling stm32f1xx_hal_tim_ex.c...
compiling stm32f1xx_hal_dma.c...
compiling stm32f1xx_hal_rcc.c...
compiling stm32f1xx_hal_uart.c...
compiling stm32f1xx_hal_tim.c...
compiling stm32f1xx_hal_i2c.c...
"Table_Puppy\Table_Puppy.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
